iptables
# Generated by iptables-save v1.4.14 on Fri Dec 26 04:32:26 2014
*filter
:INPUT DROP [320:23951]
:FORWARD DROP [0:0]
:OUTPUT DROP [30:1826]

### Inbound rules
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT

### Outbound rules
-A OUTPUT -p udp -m udp --dport 1194 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
# Tor traffic
-A OUTPUT -p tcp -m tcp --dport 9030 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9001 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT

COMMIT
